--- a/package.json
+++ b/package.json
@@ -2,9 +2,25 @@
   "name": "nodejs-server-starter",
   "version": "0.0.1",
   "description": "Simple NodeJS Server Starter",
-  "main": "src/index.ts",
   "repository": "git@github.com:khang859/nodejs-server-starter.git",
   "author": "Khang Nguyen",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "express": "^4.21.2"
+  },
+  "scripts": {
+    "start": "tsc && node dist/index.js",
+    "lint": "eslint src/**/*.ts"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.17.0",
+    "@types/express": "^5.0.0",
+    "eslint": "^9.17.0",
+    "globals": "^15.14.0",
+    "prettier": "^3.4.2",
+    "tsc": "^2.0.4",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.18.2"
+  }
 }
