--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "dist/index.js",
   "private": true,
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "helmet": "^8.0.0"
   },
   "scripts": {
     "build": "./node_modules/.bin/tsc",
