--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "dependencies": {
     "express": "^4.21.2",
+    "handlebars": "^4.7.8",
     "helmet": "^8.0.0"
   },
   "scripts": {
