--- a/package.json
+++ b/package.json
@@ -7,24 +7,37 @@
   "license": "MIT",
   "main": "dist/index.js",
   "private": true,
+  "type": "module",
   "dependencies": {
-    "express": "^4.21.2",
+    "fastify": "^5.2.0",
     "handlebars": "^4.7.8",
-    "helmet": "^8.0.0"
+    "helmet": "^8.0.0",
+    "tsc-alias": "^1.8.10"
   },
   "scripts": {
-    "build": "./node_modules/.bin/tsc",
-    "watch": "./node_modules/.bin/tsc --watch",
+    "build": "tsc && tsc-alias",
+    "build:watch": "concurrently \"tsc -w\" \"tsc-alias -w\" \"nodemon dist/index.js\"",
     "start": "node dist/index.js",
     "lint": "eslint src/**/*.ts",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@jest/types": "^29.6.3",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^22.10.3",
+    "concurrently": "^9.1.2",
     "eslint": "^9.17.0",
     "globals": "^15.14.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "tsc": "^2.0.4",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.2"
