Enhance Docker setup and configuration: added PostgreSQL service to docker-compose, updated .env.example with database credentials, modified entrypoint script for improved build process, and refactored route registration in index.ts for better structure.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,24 @@ services:
       dockerfile: Dockerfile
     ports:
       - '3000:3000'
+    env_file:
+      - .env
     volumes:
       - .:/app
+    networks:
+      - demo
+    depends_on:
+      - postgres
+  postgres:
+    image: postgres:latest
+    container_name: postgres
+    restart: always
+    ports:
+      - '5432:5432'
+    volumes:
+      - ./data:/var/lib/postgresql/data
+    env_file:
+      - .env
     networks:
       - demo
 
