--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "main": "dist/index.js",
   "private": true,
   "dependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "bcrypt": "^5.1.1",
+    "argon2": "^0.41.1",
     "drizzle-orm": "^0.38.3",
     "fastify": "^5.2.0",
     "handlebars": "^4.7.8",
@@ -21,7 +20,7 @@
   "scripts": {
     "build": "tsc && tsc-alias",
     "build:watch": "concurrently \"tsc -w\" \"tsc-alias -w\"",
-    "start": "node dist/index.js",
+    "start": "node --env-file=.env dist/index.js",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write .",
     "test": "jest",
