--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     }
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist"],
+  "exclude": ["node_modules", "dist", "coverage"],
   "lib": ["es2017"]
 }
