--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^22.10.3",
     "@types/pg": "^8.11.10",
     "concurrently": "^9.1.2",
+    "dotenv": "^16.4.7",
     "drizzle-kit": "^0.30.1",
     "eslint": "^9.17.0",
     "globals": "^15.14.0",
